# py_dataset

./: .gitignore  CITATION.cff  DEVELOPER-NOTES.html  DEVELOPER-NOTES.md  MANIFEST.in  Makefile  README.md  TODO.md  about.html  about.md  codemeta.json  demo_attachments.py  demo_attachments_2.py  index.html  page.tmpl  pyproject.toml  release-notes-v0.1.2.html  release-notes-v0.1.2.md  release-notes-v0.1.3.html  release-notes-v0.1.3.md  release-notes-v0.1.4.html  release-notes-v0.1.4.md  release-notes-v0.1.9.html  release-notes-v0.1.9.md  release-notes-v1.0.2.html  release-notes-v1.0.2.md  release-notes-v2.1.1.html  release-notes-v2.1.1.md  release-notes-v2.2.2.md  release-notes-v2.2.3.html  release-notes-v2.2.3.md  search.html  setup.py  test_dataset.py  test_libdataset.py  user_manual.html  user_manual.md  version.py  website.mak
docs/: Makefile  attachments.html  attachments.md  basics.html  basics.md  create.html  create.md  csv.html  csv.md  delete.html  delete.md  dot_path.html  dot_path.md  dotpath.md  frame.html  frame.md  frame_grid.md  frame_objects.html  frame_objects.md  frames.html  frames.md  index.html  index.md  init.html  init.md  join.html  join.md  key_filter-and-key_sort.md  keys.html  keys.md  page.tmpl  query.html  query.md  read.html  read.md  update.html  update.md
lib/: libdataset.h
pagefind/: pagefind-entry.json  pagefind.en-us_25e7551c5f443.pf_meta  pagefind.en-us_26e13f0a23e93.pf_meta  pagefind.en-us_29ed9c188a403.pf_meta  pagefind.en-us_3660462b67f9e.pf_meta  pagefind.en-us_98d17071b8d64.pf_meta  pagefind.en-us_99a8876c9c3ba.pf_meta  (+3 more)
(+51 files in other folders)
