[project]
name = "py-dataset"
version = "2.2.3.3"
description = "py_dataset provides a wrapper for the Dataset Project command line tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hatch>=1.14.1",
    "hatchling>=1.27.0",
]

[project.urls]
Repository = "https://github.com/caltechlibrary/py_dataset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

